2013-08-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_get_property), (gst_ttmlparse_set_property),
	(gst_ttmlparse_class_init), (gst_ttmlparse_init):
	* src/gstttmlparse.h:
	 - Add a property to control whether an empty buffer is required after
	   each text buffer to force its removal. This is only required for
	   text renderers which do not honor buffer duration, like "textrender".
	   Previously the behavior was "TRUE" (generate the empty buffer) and it
	   has now been changed to "FALSE" to simplify applications which render
	   their own subtitle overelays.

2013-04-29  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.6 ===

2013-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer):
	  - Add yet another Pango Markup workaround for buffers with no printable
	    chars.

2013-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-play.sh:
	  - Make test script more comfortable by removing background animation.

2013-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango):
	  - Enable usage of a comma-separated list of fonts in the font_family tag.
	    This involved a few workarounds for Pango Markup 'quirks'...

2013-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax2_element_start_ns):
	  - Fix warning on Linux.

2013-04-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c:
	* src/gstttmlattribute.c:
	* src/gstttmlattribute.h:
	* src/gstttmlparse.c:
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	  - Obey only nodes and attributes in the TTML or XML namespaces and ignore
	    the rest. This has no effect at all in the test files we have, but
	    makes the Foreign001.xml test pass for the correct reason now (the node
	    is discarded due to its namespace, not its lack of timing information).